--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     },
     "dependencies": {
         "axios": "^0.16.2",
+        "bulma": "^0.5.1",
+        "font-awesome": "^4.7.0",
         "sweetalert2": "^6.6.9",
         "uuid": "^3.1.0",
         "vee-validate": "^2.0.0-rc.14",
